syntax = "proto3";
package vkcp;

service Vkcp {
    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
    rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);

}

message HeartbeatRequest {
    uint64 term = 1;
    uint32 leaderID = 2;
    string valkeyMaster = 3;
}

message HeartbeatResponse {
    uint64 term = 1;
    bool success = 2;
}

message RequestVoteRequest {
    uint64 term = 1;
    uint32 candidateID = 2;
}

message RequestVoteResponse {
    uint64 term = 1;
    bool voteGranted = 2;
}

